# localwriter

./: .gitignore  AGENTS.md  AUDIT_GROUP_01_RESULTS.md  Addons.xcu  CALC_APIS.md  CHANGELOG.md  CHAT_SIDEBAR_ROADMAP.md  CODEBASE_COMPARISON.md  CODE_IMPROVEMENTS.md  CalcAddIn.xcu  Chat Sidebar Improvement Plan.md  DIALOG_BUG_NOTES.md  ERROR_HANDLING_DEV_PLAN.md  FINAL_SETUP_SUMMARY.md  FRAMEWORK_COVERAGE_REPORT.md  FRAMEWORK_TEST_COVERAGE.md  LANGCHAIN_PLAN.md  MARKDOWN_INSERT_INVESTIGATION.md  MCP_PROTOCOL.md  MCP_SETUP_GUIDE.md  MIGRATION_PLAN_TO_LOCALWRITER2.md  MISTRAL_CODE_SUGGESTIONS.md  Makefile  README.md  SECTION_REPLACE_RANGE_OPTIONS.md  STREAMING_AND_TOOL_CALLING.md  all_type_annotations.txt  all_type_errors.txt  benchmark_format.py  build.sh  chat_panel.py  clear_logs.sh  create_error_mapping.py  create_problematic_type_hints.py  description.xml  document_tools.py  error_categorization.md  errors.txt  errors_with_code.txt  extract_problematic_hints.py  (+27 more)
LocalWriterDialogs/: ChatPanelDialog.xdl  SettingsDialog.xdl  dialog.xlb
Showcase/: Sonnet46Arch.odg
core/: api.py  async_stream.py  calc_manipulator.py  calc_tests.py  calc_tools.py  config.py  constants.py  document.py  document_tools.py  draw_bridge.py  draw_tests.py  draw_tools.py  eval_runner.py  format_support.py  format_tests.py  image_service.py  logging.py  markdown_support.py  markdown_tests.py  mcp_events.py  mcp_server.py  mcp_thread.py  tool_bus.py  translation_tool.py  writer_ops.py
docs/: ROADMAP.md  STATE_MACHINE_ROADMAP.md  audio-architecture.md  calc-specialized-toolsets.md  (+14 more)
(+411 files in other folders)
